# daemon

./: CMakeLists.txt
client/: client.cpp
core/: core.cpp
examples/: CMakeLists.txt  daemon-test.cpp  simple_daemon_cli.cpp
include/: client.h  daemon.h  daemon_cli.h  mq.h
mq/: mq.cpp  mq_.cpp  mq_.h
src/: daemon-base.cpp  daemon-base_.cpp  daemon-base_.h  daemon_base.cpp  daemon_base_.cpp  daemon_base_.h  daemon_cli.cpp  daemon_cli_.cpp  daemon_cli_.h
tests/: CMakeLists.txt  DaemonTest.cpp  PosixMQTest.cpp  daemon-test.cpp
